# car-cost

./: .gitignore  .gitmodules  Dockerfile  LICENSE  pyproject.toml  requirements.txt
.streamlit/: config.toml
car_cost/: app.py
car_cost/models/: __init__.py  input_form_model.py
car_cost/services/: __init__.py  car_cost_app.py  database.py  deductible_car_expenses_computer.py  loan_computer.py  tax_computer.py
car_cost/settings/: __init__.py  app_settings.py  database_settings.py
