[tool.poetry]
name = "car_cost"
version = "0.1.0"
description = ""
authors = ["amarion35 <amarion.pro+git@mailbox.org>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.27.2"
streamlit-pydantic = {git = "https://github.com/LukasMasuch/streamlit-pydantic.git"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
plotly = "^5.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true